# kvdb

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md
.github/workflows/: ci.yml
benches/: kvdb_bench.rs
benchmarks/: README.md  standard-2026-07-20-after.txt  standard-2026-07-20-before-compaction.txt  standard-2026-07-20-before-worker-cache.txt  standard-2026-07-20.md
src/: checksum.rs  error.rs  failpoint.rs  http.rs  lib.rs  limits.rs  log.rs  sstable.rs  store.rs
tests/: crash.rs  http.rs  load.rs  perf.rs  store.rs
